--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "kanopi/shrubs",
-  "description": " A set of default tests to get you jumpstarted configuring Cypress for Drupal.",
+  "description": " A set of default e2e tests to get you jumpstarted configuring Cypress for Drupal.",
   "type": "cypress-e2e",
   "homepage": "https://github.com/kanopi/shrubs",
   "authors": [
