--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,18 @@
 {
   "name": "kanopi/shrubs",
-  "description": " A set of default e2e tests to get you jumpstarted configuring Cypress for Drupal.",
+  "description": " A set of default support commands to get you jumpstarted configuring Cypress for Drupal.",
   "type": "cypress-support",
   "homepage": "https://github.com/kanopi/shrubs",
+  "keywords": [
+    "drupal",
+    "cypress",
+    "support-commands",
+    "e2e",
+    "cypress.io",
+    "integration-test",
+    "testing",
+    "automation"
+  ],
   "authors": [
     {
       "name": "Jim Birch",
